--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/libraries/CCapture.all.min.js"></script>
+    <script src="js/libraries/noise.js"></script>
+    <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
     <div class="header">
@@ -25,6 +30,12 @@
 ██████╔╝███████╗███████║██║╚██████╔╝██║ ╚████║
 ╚═════╝ ╚══════╝╚══════╝╚═╝ ╚═════╝ ╚═╝  ╚═══╝
         </pre>
+    </div>
+    <div class="introduction">
+        <h2>Introduction</h2>
+        <p>
+            This website is a list of Generative Design Sketches inspired and guided by the CODE University module Generative Design.
+        </p>
     </div>
 </body>
 </html>
