refactored to prepare for multiple sketches

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/grayColorNoiseSketch.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
     <script src="js/libraries/noise.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
@@ -37,5 +37,9 @@
             This website is a list of Generative Design Sketches inspired and guided by the CODE University module Generative Design.
         </p>
     </div>
+
+    <div id="grayColorNoiseSketch"></div>
+
+    <footer>created by Timon Christiansen</footer>
 </body>
 </html>
