added offset mesh sketch

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/grayColorNoiseSketch.js"></script>
+    <script src="js/offsetMesh.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
     <script src="js/libraries/noise.js"></script>
+    <script src="js/libraries/index.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
@@ -38,7 +40,9 @@
         </p>
     </div>
 
-    <div id="grayColorNoiseSketch"></div>
+    <div class="sketch" id="grayColorNoiseSketch"></div>
+
+    <div class="sketch" id="offsetMesh"></div>
 
     <footer>created by Timon Christiansen</footer>
 </body>
