added offset mesh printText renderer

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <script src="js/grayColorNoiseSketch.js"></script>
     <script src="js/offsetMesh.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
-    <script src="js/libraries/noise.js"></script>
-    <script src="js/libraries/index.js"></script>
+    <script src="js/libraries/openSimpleNoise.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
