added gifs, favicon and fixed width for media and sketches

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/grayColorNoiseSketch.js"></script>
@@ -41,7 +42,13 @@
 
     <div class="sketch" id="grayColorNoiseSketch"></div>
 
+    <img src="gif/GrayLayer.gif" />
+
     <div class="sketch" id="offsetMesh"></div>
+
+    <img src="gif/OffsetMesh.gif" />
+
+    <img src="gif/GridLandScape.gif" />
 
     <footer>created by Timon Christiansen</footer>
 </body>
