--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/grayColorNoiseSketch.js"></script>
     <script src="js/offsetMesh.js"></script>
+    <script src="js/latestSketch/lS_1.js"></script>
+    <script src="js/latestSketch/lS_2.js"></script>
+    <script src="js/latestSketch/lS_3.js"></script>
+    <script src="js/latestSketch/lS_4.js"></script>
+    <script src="js/latestSketch/lS_5.js"></script>
+    <script src="js/latestSketch/lS_6.js"></script>
+    <script src="js/latestSketch/lS_7.js"></script>
+    <script src="js/latestSketch/lS_8.js"></script>
+    <script src="js/latestSketch/lS_9.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
     <script src="js/libraries/openSimpleNoise.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
@@ -49,6 +58,26 @@
     <img src="gif/OffsetMesh.gif" />
 
     <img src="gif/GridLandScape.gif" />
+
+    <h2>My latest sketch</h2>
+
+    <div class="sketch" id="lS_1"></div>
+
+    <div class="sketch" id="lS_2"></div>
+
+    <div class="sketch" id="lS_3"></div>
+
+    <div class="sketch" id="lS_4"></div>
+
+    <div class="sketch" id="lS_5"></div>
+
+    <div class="sketch" id="lS_6"></div>
+
+    <div class="sketch" id="lS_7"></div>
+
+    <div class="sketch" id="lS_8"></div>
+
+    <div class="sketch" id="lS_9"></div>
 
     <footer>created by Timon Christiansen</footer>
 </body>
