put latest sketch into subpage

--- a/src/latestSketch.html
+++ b/src/latestSketch.html
@@ -7,14 +7,21 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="js/grayColorNoiseSketch.js"></script>
-    <script src="js/offsetMesh.js"></script>
+    <script src="js/latestSketch/lS_1.js"></script>
+    <script src="js/latestSketch/lS_2.js"></script>
+    <script src="js/latestSketch/lS_3.js"></script>
+    <script src="js/latestSketch/lS_4.js"></script>
+    <script src="js/latestSketch/lS_5.js"></script>
+    <script src="js/latestSketch/lS_6.js"></script>
+    <script src="js/latestSketch/lS_7.js"></script>
+    <script src="js/latestSketch/lS_8.js"></script>
+    <script src="js/latestSketch/lS_9.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
     <script src="js/libraries/openSimpleNoise.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
-    <div class="header">
+<div class="header">
         <pre>
  ██████╗ ███████╗███╗   ██╗███████╗██████╗  █████╗ ████████╗██╗██╗   ██╗███████╗
 ██╔════╝ ██╔════╝████╗  ██║██╔════╝██╔══██╗██╔══██╗╚══██╔══╝██║██║   ██║██╔════╝
@@ -23,8 +30,8 @@
 ╚██████╔╝███████╗██║ ╚████║███████╗██║  ██║██║  ██║   ██║   ██║ ╚████╔╝ ███████╗
  ╚═════╝ ╚══════╝╚═╝  ╚═══╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═══╝  ╚══════╝
         </pre>
-        <br/>
-        <pre>
+    <br/>
+    <pre>
 ██████╗ ███████╗███████╗██╗ ██████╗ ███╗   ██╗
 ██╔══██╗██╔════╝██╔════╝██║██╔════╝ ████╗  ██║
 ██║  ██║█████╗  ███████╗██║██║  ███╗██╔██╗ ██║
@@ -32,29 +39,55 @@
 ██████╔╝███████╗███████║██║╚██████╔╝██║ ╚████║
 ╚═════╝ ╚══════╝╚══════╝╚═╝ ╚═════╝ ╚═╝  ╚═══╝
         </pre>
-    </div>
-    <div class="introduction">
-        <h2>Introduction</h2>
-        <p>
-            This website is a list of Generative Design Sketches inspired and guided by the CODE University module Generative Design.
-        </p>
-    </div>
+</div>
 
-    <div class="sketch" id="grayColorNoiseSketch"></div>
+<h2>My latest sketch</h2>
 
-    <img src="gif/GrayLayer.gif" />
-
-    <div class="sketch" id="offsetMesh"></div>
-
-    <img src="gif/OffsetMesh.gif" />
-
-    <img src="gif/GridLandScape.gif" />
-
-    <div class="link">
-        <a href="/latestSketch"><span>My latest sketch </span></a>
-        <span>&#8680;</span>
+<div class="row">
+    <div class="sketch small" id="lS_1">
+        <p>Version 1</p>
     </div>
 
-    <footer>created by Timon Christiansen</footer>
+    <div class="sketch small" id="lS_2">
+        <p>Version 2</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="sketch small" id="lS_3">
+        <p>Version 3</p>
+    </div>
+
+    <div class="sketch small" id="lS_4">
+        <p>Version 4</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="sketch small" id="lS_5">
+        <p>Version 5</p>
+    </div>
+
+    <div class="sketch small" id="lS_6">
+        <p>Version 6</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="sketch small" id="lS_7">
+        <p>Version 7</p>
+    </div>
+
+    <div class="sketch small" id="lS_8">
+        <p>Version 8</p>
+    </div>
+</div>
+
+
+<div class="sketch" id="lS_9">
+    <p>Version 9 - The Canvas</p>
+</div>
+
+<footer>created by Timon Christiansen</footer>
 </body>
 </html>
