added github link, closes #2

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
     <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
+    <a class="icon tooltip" href="https://github.com/8BitJonny/Generative-Design" target="_blank" rel="noopener noreferrer">
+        <img class="icon" src="./GitHub-Mark-Light-120px-plus.png" alt="">
+        <span class="tooltiptext">Source Code</span>
+    </a>
     <div class="header">
         <pre>
  ██████╗ ███████╗███╗   ██╗███████╗██████╗  █████╗ ████████╗██╗██╗   ██╗███████╗
