--- a/src/latestSketch.html
+++ b/src/latestSketch.html
@@ -16,6 +16,7 @@
     <script src="js/latestSketch/lS_7.js"></script>
     <script src="js/latestSketch/lS_8.js"></script>
     <script src="js/latestSketch/lS_9.js"></script>
+    <script src="js/latestSketch/lS_10.js"></script>
     <script src="js/libraries/CCapture.all.min.js"></script>
     <script src="js/libraries/openSimpleNoise.js"></script>
     <script src="js/libraries/gif.worker.js"></script>
@@ -90,6 +91,10 @@
 
 <div class="sketch" id="lS_9">
     <p>Version 9 - The Canvas</p>
+</div>
+
+<div class="sketch" id="lS_10">
+    <p>Version 10 - The Game</p>
 </div>
 
 <footer>created by Timon Christiansen</footer>
