new website sub page structure

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <a class="icon tooltip" href="https://github.com/8BitJonny/Generative-Design" target="_blank" rel="noopener noreferrer">
-        <img class="icon" src="./GitHub-Mark-Light-120px-plus.png" alt="">
+        <img class="icon" src="media/GitHub-Mark-Light-120px-plus.png" alt="">
         <span class="tooltiptext">Source Code</span>
     </a>
     <div class="header">
@@ -37,6 +37,15 @@
 ╚═════╝ ╚══════╝╚══════╝╚═╝ ╚═════╝ ╚═╝  ╚═══╝
         </pre>
     </div>
+
+    <div class="linkWrapper">
+        <div></div>
+        <div class="link">
+            <a href="/latestSketch1-4.html"><span>Next page </span></a>
+            <span>&#8680;</span>
+        </div>
+    </div>
+
     <div class="introduction">
         <h2>Introduction</h2>
         <p>
@@ -46,17 +55,20 @@
 
     <div class="sketch" id="grayColorNoiseSketch"></div>
 
-    <img src="gif/GrayLayer.gif" />
+    <img src="media/gif/GrayLayer.gif" />
 
     <div class="sketch" id="offsetMesh"></div>
 
-    <img src="gif/OffsetMesh.gif" />
+    <img src="media/gif/OffsetMesh.gif" />
 
-    <img src="gif/GridLandScape.gif" />
+    <img src="media/gif/GridLandScape.gif" />
 
-    <div class="link">
-        <a href="/latestSketch"><span>My latest sketch </span></a>
-        <span>&#8680;</span>
+    <div class="linkWrapper">
+        <div></div>
+        <div class="link">
+            <a href="/latestSketch1-4.html"><span>Next page </span></a>
+            <span>&#8680;</span>
+        </div>
     </div>
 
     <footer>created by Timon Christiansen</footer>
