--- a/src/latestSketch5-8.html
+++ b/src/latestSketch5-8.html
@@ -7,19 +7,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="js/latestSketch/lS_1.js"></script>
-    <script src="js/latestSketch/lS_2.js"></script>
-    <script src="js/latestSketch/lS_3.js"></script>
-    <script src="js/latestSketch/lS_4.js"></script>
     <script src="js/latestSketch/lS_5.js"></script>
     <script src="js/latestSketch/lS_6.js"></script>
     <script src="js/latestSketch/lS_7.js"></script>
     <script src="js/latestSketch/lS_8.js"></script>
-    <script src="js/latestSketch/lS_9.js"></script>
-    <script src="js/latestSketch/lS_10.js"></script>
-    <script src="js/libraries/CCapture.all.min.js"></script>
-    <script src="js/libraries/openSimpleNoise.js"></script>
-    <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
 <a class="icon tooltip" href="https://github.com/8BitJonny/Generative-Design" target="_blank" rel="noopener noreferrer">
@@ -49,35 +40,15 @@
 <div class="linkWrapper">
     <div class="link">
         <span>&#8678;</span>
-        <a href="/"><span>Previous page </span></a>
+        <a href="/latestSketch1-4.html"><span>Previous page </span></a>
     </div>
     <div class="link">
-        <a href="/latestSketch"><span>Next page </span></a>
+        <a href="/canvas"><span>Next page </span></a>
         <span>&#8680;</span>
     </div>
 </div>
 
-<h2>My latest sketch</h2>
-
-<div class="row">
-    <div class="sketch small" id="lS_1">
-        <p>Version 1</p>
-    </div>
-
-    <div class="sketch small" id="lS_2">
-        <p>Version 2</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="sketch small" id="lS_3">
-        <p>Version 3</p>
-    </div>
-
-    <div class="sketch small" id="lS_4">
-        <p>Version 4</p>
-    </div>
-</div>
+<h2>Versions 5 - 8</h2>
 
 <div class="row">
     <div class="sketch small" id="lS_5">
@@ -96,26 +67,6 @@
 
     <div class="sketch small" id="lS_8">
         <p>Version 8</p>
-    </div>
-</div>
-
-
-<div class="sketch" id="lS_9">
-    <p>Version 9 - The Canvas</p>
-</div>
-
-<div class="sketch" id="lS_10">
-    <p>Version 10 - The Game</p>
-</div>
-
-<div class="linkWrapper">
-    <div class="link">
-        <span>&#8678;</span>
-        <a href="/"><span>Previous page </span></a>
-    </div>
-    <div class="link">
-        <a href="/latestSketch"><span>Next page </span></a>
-        <span>&#8680;</span>
     </div>
 </div>
 
