--- a/src/latestSketch1-4.html
+++ b/src/latestSketch1-4.html
@@ -11,15 +11,6 @@
     <script src="js/latestSketch/lS_2.js"></script>
     <script src="js/latestSketch/lS_3.js"></script>
     <script src="js/latestSketch/lS_4.js"></script>
-    <script src="js/latestSketch/lS_5.js"></script>
-    <script src="js/latestSketch/lS_6.js"></script>
-    <script src="js/latestSketch/lS_7.js"></script>
-    <script src="js/latestSketch/lS_8.js"></script>
-    <script src="js/latestSketch/lS_9.js"></script>
-    <script src="js/latestSketch/lS_10.js"></script>
-    <script src="js/libraries/CCapture.all.min.js"></script>
-    <script src="js/libraries/openSimpleNoise.js"></script>
-    <script src="js/libraries/gif.worker.js"></script>
 </head>
 <body>
 <a class="icon tooltip" href="https://github.com/8BitJonny/Generative-Design" target="_blank" rel="noopener noreferrer">
@@ -52,12 +43,12 @@
         <a href="/"><span>Previous page </span></a>
     </div>
     <div class="link">
-        <a href="/latestSketch"><span>Next page </span></a>
+        <a href="/latestSketch5-8.html"><span>Next page </span></a>
         <span>&#8680;</span>
     </div>
 </div>
 
-<h2>My latest sketch</h2>
+<h2>Versions 1 - 4</h2>
 
 <div class="row">
     <div class="sketch small" id="lS_1">
@@ -76,46 +67,6 @@
 
     <div class="sketch small" id="lS_4">
         <p>Version 4</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="sketch small" id="lS_5">
-        <p>Version 5</p>
-    </div>
-
-    <div class="sketch small" id="lS_6">
-        <p>Version 6</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="sketch small" id="lS_7">
-        <p>Version 7</p>
-    </div>
-
-    <div class="sketch small" id="lS_8">
-        <p>Version 8</p>
-    </div>
-</div>
-
-
-<div class="sketch" id="lS_9">
-    <p>Version 9 - The Canvas</p>
-</div>
-
-<div class="sketch" id="lS_10">
-    <p>Version 10 - The Game</p>
-</div>
-
-<div class="linkWrapper">
-    <div class="link">
-        <span>&#8678;</span>
-        <a href="/"><span>Previous page </span></a>
-    </div>
-    <div class="link">
-        <a href="/latestSketch"><span>Next page </span></a>
-        <span>&#8680;</span>
     </div>
 </div>
 
