--- a/src/game.html
+++ b/src/game.html
@@ -41,9 +41,25 @@
     </div>
 </div>
 
+<p>
+    Now we come to the last version of my sketch. When I created version 7 and I had fun with the tree going into the opposite direction of my cursor I thought of a way to go deeper into that.
+    My idea was to create some sort of test or game that would show how easy or hard it is to control this tree. At first, I thought of the tree as the object to control and a little ball to hit
+    with it. But what I didn't like about that was that with all the branches of the tree it would be pretty easy to hit the ball. Dodging an object was also an idea but in that game, you could
+    just stay a little dot in the middle of the canvas and don't move. I started to implement it and thought I would figure out the specifics along the way.
+</p>
+
+<p>
+    When I started to implement the hit detection I disabled all branches but one so I had an easier time debugging it and then the realization came to me that this could work quite well for
+    the game itself. One branch, build from several tiny branches that all have the same angle to the previous branch and then one ball that you have to hit with the tip of the branch.
+    I finished up the implementation and switched from completely random targets to prerecorded ones because I realized that not every target is reachable with this configuration.
+    Now you have 20 targets and the goal is it to hit them all as fast as possible. Which high score did you get? My high score is 31.409 seconds with the MacBook TrackPad.
+</p>
+
 <h2>Version 10 - Game</h2>
 
 <div class="sketch" id="lS_10"></div>
+
+<p>Turns out that most of the time it is pretty easy to hit the ball but sometimes it gets tricky. I like how this last version turned out to be.</p>
 
 <footer>created by Timon Christiansen</footer>
 </body>
