--- a/src/latestSketch5-8.html
+++ b/src/latestSketch5-8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/media/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/latestSketch/lS_5.js"></script>
@@ -50,6 +50,14 @@
 
 <h2>Versions 5 - 8</h2>
 
+<p>
+    With the following four versions its starts to get interesting because they are interactive.
+    Based on the cursors Y position I altered the length of the branches and based on the cursors X position I altered the angle with which the branches start from the
+    previous one.
+</p>
+
+<p> With versions 5 and 6 I experimented with what should happen when the cursor is in the lower half of the sketch.</p>
+
 <div class="row">
     <div class="sketch small" id="lS_5">
         <p>Version 5</p>
@@ -69,6 +77,20 @@
         <p>Version 8</p>
     </div>
 </div>
+
+<p>
+    I don't know why but I liked the experience of the tree always going into the opposite direction as the cursor which is why I created version 7 from version 6.
+    This also sparked an idea in my head to create a kind of game that tests how good the user can control the tree. More on that later.
+</p>
+
+<p>
+    Version 8 is a big favorite of mine because I love symmetry. Therefore I not only drew one tree but four. I loved to play around with it and I made two screenshots of figures
+    that I found the most beautiful.
+</p>
+
+<img class="tiny" src="./media/symmetry1.png" width="400" height="400" alt="">
+<img class="tiny" src="./media/symmetry2.png" width="400" height="400" alt="">
+
 
 <footer>created by Timon Christiansen</footer>
 </body>
