--- a/src/game.html
+++ b/src/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/media/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./media/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/latestSketch/lS_10.js"></script>
@@ -37,7 +37,7 @@
 <div class="linkWrapper">
     <div class="link">
         <span>&#8678;</span>
-        <a href="/canvas"><span>Previous page </span></a>
+        <a href="./canvas"><span>Previous page </span></a>
     </div>
 </div>
 
