--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/media/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./media/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/grayColorNoiseSketch.js"></script>
@@ -41,7 +41,7 @@
     <div class="linkWrapper">
         <div></div>
         <div class="link">
-            <a href="/latestSketch1-4.html"><span>Next page </span></a>
+            <a href="./latestSketch1-4.html"><span>Next page </span></a>
             <span>&#8680;</span>
         </div>
     </div>
@@ -113,7 +113,7 @@
     <div class="linkWrapper">
         <div></div>
         <div class="link">
-            <a href="/latestSketch1-4.html"><span>Next page </span></a>
+            <a href="./latestSketch1-4.html"><span>Next page </span></a>
             <span>&#8680;</span>
         </div>
     </div>
