--- a/latestSketch5-8.html
+++ b/latestSketch5-8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Generative Design</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/media/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./media/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="js/latestSketch/lS_5.js"></script>
@@ -40,10 +40,10 @@
 <div class="linkWrapper">
     <div class="link">
         <span>&#8678;</span>
-        <a href="/latestSketch1-4.html"><span>Previous page </span></a>
+        <a href="./latestSketch1-4.html"><span>Previous page </span></a>
     </div>
     <div class="link">
-        <a href="/canvas"><span>Next page </span></a>
+        <a href="./canvas.html"><span>Next page </span></a>
         <span>&#8680;</span>
     </div>
 </div>
